New version, with UI.

--- a/popup.html
+++ b/popup.html
@@ -34,16 +34,16 @@
                     <button type="button" id="btn-data-layer" class="btn btn-primary">View Data Layer</button>
                 </div>
             </div>
-            <!-- <div class="row" id="get-consents">
+            <div class="row text-center" id="get-consents">
                 <div class="col">
                     <button type="button" id="btn-consents" class="btn btn-primary">View Consents</button>
                 </div>
             </div>
-        </div> -->
-
-
         </div>
-        <script src="index.js"></script>
+
+
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
