--- a/popup.html
+++ b/popup.html
@@ -19,31 +19,37 @@
         <div id="uc-data" class="container">
             <div class="row text-center " id="get-uc-data">
                 <div class="col">
-                    <button type="button" id="btn-uc-data" class="btn btn-primary ">
+                    <button type="button" id="btn-uc-data" class="btn btn-outline-primary">
                         View Config Data
                     </button>
                 </div>
             </div>
             <div class="row text-center" id="get-scripts">
                 <div class="col">
-                    <button type="button" id="btn-scripts" class="btn btn-primary">View Script Tags</button>
+                    <button type="button" id="btn-scripts" class="btn btn-outline-primary">View Script Tags</button>
                 </div>
             </div>
             <div class="row text-center" id="get-data-layer">
                 <div class="col">
-                    <button type="button" id="btn-data-layer" class="btn btn-primary">View Data Layer</button>
+                    <button type="button" id="btn-data-layer" class="btn btn-outline-primary">View Data Layer</button>
                 </div>
             </div>
             <div class="row text-center" id="get-consents">
                 <div class="col">
-                    <button type="button" id="btn-consents" class="btn btn-primary">View Consents</button>
+                    <button type="button" id="btn-consents" class="btn btn-outline-primary">View Consents</button>
+                </div>
+            </div>
+            <div class="row text-center" id="get-config">
+                <div class="col" id="config-data">
                 </div>
             </div>
         </div>
 
 
+
     </div>
     <script src="index.js"></script>
+
 </body>
 
 </html>
