New background added, and some other css changes

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 
 <script src="resources/packages/bootstrap-5.0.1-dist/js/bootstrap.min.js"></script>
 
-<body>
+<body class="bg-light">
     <div id="header-image">
         <img src="resources/img/usercentrics-logo.svg">
     </div>
@@ -19,24 +19,24 @@
         <div id="uc-data" class="container">
             <div class="row text-center " id="get-uc-data">
                 <div class="col">
-                    <button type="button" id="btn-uc-data" class="btn btn-outline-primary">
+                    <button type="button" id="btn-uc-data" class="btn btn-primary">
                         View Config Data
                     </button>
                 </div>
             </div>
             <div class="row text-center" id="get-scripts">
                 <div class="col">
-                    <button type="button" id="btn-scripts" class="btn btn-outline-primary">View Script Tags</button>
+                    <button type="button" id="btn-scripts" class="btn">View Script Tags</button>
                 </div>
             </div>
             <div class="row text-center" id="get-data-layer">
                 <div class="col">
-                    <button type="button" id="btn-data-layer" class="btn btn-outline-primary">View Data Layer</button>
+                    <button type="button" id="btn-data-layer" class="btn btn-primary">View Data Layer</button>
                 </div>
             </div>
             <div class="row text-center" id="get-consents">
                 <div class="col">
-                    <button type="button" id="btn-consents" class="btn btn-outline-primary">View Consents</button>
+                    <button type="button" id="btn-consents" class="btn btn-primary">View Consents</button>
                 </div>
             </div>
             <div class="row text-center" id="get-config">
