Added UC script Injection

--- a/popup.html
+++ b/popup.html
@@ -20,23 +20,28 @@
             <div class="row text-center " id="get-uc-data">
                 <div class="col">
                     <button type="button" id="btn-uc-data" class="btn btn-primary">
-                        View Config Data
+                        Config Data
                     </button>
                 </div>
             </div>
             <div class="row text-center" id="get-scripts">
                 <div class="col">
-                    <button type="button" id="btn-scripts" class="btn">View Script Tags</button>
+                    <button type="button" id="btn-scripts" class="btn">Scripts</button>
                 </div>
             </div>
             <div class="row text-center" id="get-data-layer">
                 <div class="col">
-                    <button type="button" id="btn-data-layer" class="btn btn-primary">View Data Layer</button>
+                    <button type="button" id="btn-data-layer" class="btn btn-primary">Data Layer</button>
                 </div>
             </div>
             <div class="row text-center" id="get-consents">
                 <div class="col">
-                    <button type="button" id="btn-consents" class="btn btn-primary">View Consents</button>
+                    <button type="button" id="btn-consents" class="btn btn-primary">Consents</button>
+                </div>
+            </div>
+            <div class="row text-center" id="inject-cmp">
+                <div class="col">
+                    <button type="button" id="btn-inject-cmp" class="btn btn-primary">Inject CMP</button>
                 </div>
             </div>
             <div class="row text-center" id="get-config">
@@ -44,9 +49,9 @@
                 </div>
             </div>
         </div>
-
-
-
+    </div>
+    <div>
+        <h2 id="config-data-input"></h2>
     </div>
     <script src="index.js"></script>
 
