New UI and Inject CMP Functionality

--- a/popup.html
+++ b/popup.html
@@ -48,7 +48,16 @@
                 <div class="col" id="config-data">
                 </div>
             </div>
+            <!-- <div class="row" id="inject-cmp">
+                <div class="col">
+                    <input type="submit" id="btn-inject-cmp" value="Inject CMP">
+                </div>
+                <div class="col">
+                    <input type="text" id="get-settingsid" placeholder="SettingsId">
+                </div> 
+            </div>-->
         </div>
+    </div>
     </div>
     <div>
         <h2 id="config-data-input"></h2>
