Added support for loader.js script, updated Readme

--- a/popup.html
+++ b/popup.html
@@ -39,23 +39,18 @@
                     <button type="button" id="btn-consents" class="btn btn-primary">Consents</button>
                 </div>
             </div>
-            <div class="row text-center" id="inject-cmp">
-                <div class="col">
-                    <button type="button" id="btn-inject-cmp" class="btn btn-primary">Inject CMP</button>
-                </div>
-            </div>
             <div class="row text-center" id="get-config">
                 <div class="col" id="config-data">
                 </div>
             </div>
-            <!-- <div class="row" id="inject-cmp">
+            <div class="row" id="inject-cmp">
                 <div class="col">
                     <input type="submit" id="btn-inject-cmp" value="Inject CMP">
                 </div>
                 <div class="col">
                     <input type="text" id="get-settingsid" placeholder="SettingsId">
-                </div> 
-            </div>-->
+                </div>
+            </div>
         </div>
     </div>
     </div>
